Fix to ios Flickering

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -860,8 +860,9 @@ textarea {
 }
 
 footer {
-    padding-top: 20px;
+    padding-top: 30px;
     padding-bottom: 10px;
+    margin-bottom: 20px;
     text-align: center;
     overflow-x: hidden;
     -webkit-backface-visibility: hidden;
